# HackCanada-frontend

./: .env  .env.example  README.md  eslint_errors.json  package-lock.json  package.json  pyproject.toml  vite.config.ts
.claude/: settings.local.json
analysis_agent/: __init__.py  analyzer.py  config.py  database.py  fallback.py  gemini_client.py  main.py  models.py  retriever.py  schemas.py  worker.py
analysis_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
analysis_agent/catalog/: example_service.yaml
extension/: content.js  index.html  manifest.json
extension/assets/: index-2_26Wmi9.js  index-B3crCb8-.js  index-BT-txIq5.js  index-C9rmWTq_.js  index-C_5W5d3P.js  index-CadpI6zE.js  index-CnAj9bMG.js  index-DDPNNLid.css  index-DP_VIxpD.css  index-DSUtyT_E.js  index-DWoGzelA.js  index-DZxkAx2a.css  index-K21uA_2Y.js  index-KKDSr7gX.js  index-Z4Qol-2u.js  index-r8j-Fc6B.js  index-utTCrY5y.css
src/: App.tsx  index.css
src/components/: Dashboard.tsx  Header.tsx  IncidentCard.tsx  ReviewModal.tsx  Sidebar.tsx
src/lib/: diagnosisSummary.ts  mockData.ts  renderMarkdown.tsx  types.ts
tests/: test_analyzer_markdown.py  test_execution_plan_cleanup.py
